# mqt-qmap

./: .license-tools-config.json  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md  UPGRADING.md  noxfile.py  pyproject.toml  sitecustomize.py
.github/: renovate.json5
.github/workflows/: cd.yml  ci.yml  templating.yml  update-mqt-core.yml  upstream.yml
bindings/: CMakeLists.txt
bindings/clifford_synthesis/: CMakeLists.txt  clifford_synthesis.cpp
bindings/hybrid_mapper/: CMakeLists.txt  hybrid_mapper.cpp
bindings/na/: CMakeLists.txt
bindings/na/nasp/: CMakeLists.txt  nasp.cpp
bindings/na/zoned/: CMakeLists.txt  zoned.cpp
bindings/sc/: CMakeLists.txt  sc.cpp
cmake/: ExternalDependencies.cmake  FindZ3.cmake  cmake_uninstall.cmake.in  try_z3.cpp
docs/: conf.py  index.md  na_hybrid.md
eval/clifford_state_prep/: clifford_state_prep_eval.py  monitor_progress.py  visualize_clifford_synthesis.py
eval/na/zoned/: README.md  eval_helper.py  eval_ids_relaxed_routing.py  eval_min_flow_scheduling.py  mqt.nastyle  square_architecture.json
include/cliffordsynthesis/: CliffordSynthesizer.hpp  Configuration.hpp  Results.hpp  Tableau.hpp  TargetMetric.hpp
include/cliffordsynthesis/encoding/: GateEncoder.hpp  MultiGateEncoder.hpp  ObjectiveEncoder.hpp  SATEncoder.hpp  SingleGateEncoder.hpp  TableauEncoder.hpp
include/hybridmap/: HardwareQubits.hpp  HybridAnimation.hpp  HybridNeutralAtomMapper.hpp  HybridSynthesisMapper.hpp  Mapping.hpp  MoveToAodConverter.hpp  NeutralAtomArchitecture.hpp  NeutralAtomDefinitions.hpp  NeutralAtomLayer.hpp  NeutralAtomScheduler.hpp  NeutralAtomUtils.hpp
include/logicblocks/: Encodings.hpp  Logic.hpp  LogicBlock.hpp  LogicTerm.hpp  Model.hpp  Z3Logic.hpp  Z3Model.hpp  util_logicblock.hpp
include/na/nalac/: NAGraphAlgorithms.hpp  NAMapper.hpp
include/na/nalac/datastructures/: Architecture.hpp  Configuration.hpp  NAComputation.hpp  NADefinitions.hpp
include/na/nasp/: CodeGenerator.hpp  Solver.hpp
include/na/zoned/: Architecture.hpp  Compiler.hpp  Types.hpp
include/na/zoned/code_generator/: CodeGenerator.hpp
include/na/zoned/layout_synthesizer/: LayoutSynthesizerBase.hpp  PlaceAndRouteSynthesizer.hpp
include/na/zoned/reuse_analyzer/: ReuseAnalyzerBase.hpp  VertexMatchingReuseAnalyzer.hpp
include/na/zoned/scheduler/: ASAPScheduler.hpp  MinFlowScheduler.hpp  SchedulerBase.hpp
include/sc/: Architecture.hpp  DataLogger.hpp  Mapper.hpp  MappingResults.hpp  utils.hpp
include/sc/configuration/: AvailableArchitecture.hpp  CommanderGrouping.hpp  Configuration.hpp  EarlyTermination.hpp  Encoding.hpp  Heuristic.hpp  InitialLayout.hpp  Layering.hpp  LookaheadHeuristic.hpp  Method.hpp  SwapReduction.hpp
include/sc/exact/: ExactMapper.hpp
include/sc/heuristic/: HeuristicMapper.hpp  UniquePriorityQueue.hpp
python/mqt/qmap/: __init__.py  _version.pyi  clifford_synthesis.pyi  hybrid_mapper.pyi  sc.pyi  types.py
python/mqt/qmap/_compat/: __init__.py  typing.py
python/mqt/qmap/na/: __init__.py  state_preparation.pyi  zoned.pyi
python/mqt/qmap/plugins/: __init__.py
python/mqt/qmap/visualization/: __init__.py  search_visualizer.py  visualize_search_graph.py
src/: CMakeLists.txt
src/cliffordsynthesis/: CMakeLists.txt  CliffordSynthesizer.cpp  Results.cpp  Tableau.cpp
src/cliffordsynthesis/encoding/: GateEncoder.cpp  MultiGateEncoder.cpp  ObjectiveEncoder.cpp  SATEncoder.cpp  SingleGateEncoder.cpp  TableauEncoder.cpp
src/hybridmap/: CMakeLists.txt  HardwareQubits.cpp  HybridAnimation.cpp  HybridNeutralAtomMapper.cpp  HybridSynthesisMapper.cpp  Mapping.cpp  MoveToAodConverter.cpp  NeutralAtomArchitecture.cpp  NeutralAtomLayer.cpp  NeutralAtomScheduler.cpp  NeutralAtomUtils.cpp
src/logicblocks/: CMakeLists.txt  Encodings.cpp  LogicBlock.cpp  LogicTerm.cpp  Z3Logic.cpp  Z3Model.cpp
src/na/: CMakeLists.txt
src/na/nalac/: CMakeLists.txt  NAGraphAlgorithms.cpp  NAMapper.cpp
src/na/nalac/datastructures/: Architecture.cpp  Configuration.cpp  NAComputation.cpp
src/na/nasp/: CMakeLists.txt  CodeGenerator.cpp  Solver.cpp
src/na/zoned/: Architecture.cpp  CMakeLists.txt
src/na/zoned/code_generator/: CodeGenerator.cpp
src/na/zoned/reuse_analyzer/: VertexMatchingReuseAnalyzer.cpp
src/na/zoned/scheduler/: ASAPScheduler.cpp  MinFlowScheduler.cpp
src/sc/: Architecture.cpp  CMakeLists.txt  Configuration.cpp  DataLogger.cpp  Mapper.cpp  utils.cpp
src/sc/exact/: CMakeLists.txt  ExactMapper.cpp
src/sc/heuristic/: CMakeLists.txt  HeuristicMapper.cpp
test/: CMakeLists.txt
test/cliffordsynthesis/: CMakeLists.txt  test_synthesis.cpp  test_tableau.cpp
test/hybridmap/: CMakeLists.txt  test_architecture.cpp  test_hardware_qubits.cpp  test_hybrid_synthesis_map.cpp  test_hybridmap.cpp  test_mapping.cpp  test_scheduler.cpp  test_utils.cpp
test/hybridmap/architectures/: arch_minimal.json  rubidium_gate.json
test/hybridmap/circuits/: long_random.qasm  multi_qubit.qasm
test/logicblocks/: CMakeLists.txt  test_logicblocks.cpp
test/na/: CMakeLists.txt
test/na/nalac/: CMakeLists.txt  test_nagraphalgorithms.cpp  test_namapper.cpp
test/na/nalac/datastructures/: test_architecture.cpp  test_configuration.cpp  (+3 more)
test/na/nasp/: CMakeLists.txt  test_codegenerator.cpp  test_solver.cpp
test/na/zoned/: CMakeLists.txt  test_architecture.cpp  test_asap_scheduler.cpp  test_code_generator.cpp  test_compiler.cpp  test_heuristic_placer.cpp  test_independent_set_router.cpp  test_min_flow_scheduler.cpp  test_vertex_matching_placer.cpp  test_vertex_matching_reuse_analyzer.cpp
test/python/: test.py
test/python/clifford_synthesis/: test_clifford_synthesis.py
test/python/hybrid_mapper/: test_hybrid_mapper.py  test_hybrid_synthesis.py
test/python/na/: test_state_preparation.py  test_zoned.py
test/python/sc/: test_compile.py  test_exact_mapper.py  test_heuristic_mapper.py  test_qiskit_backend_imports.py  test_subarchitectures.py
test/sc/: CMakeLists.txt  test_architecture.cpp  test_general.cpp
test/sc/exact/: CMakeLists.txt  test_encodings.cpp  test_exact.cpp
test/sc/heuristic/: CMakeLists.txt  test_heuristic.cpp
(+25 files in other folders)
