# Copyright (c) 2023 - 2026 Chair for Design Automation, TUM
# Copyright (c) 2025 - 2026 Munich Quantum Software Company GmbH
# All rights reserved.
#
# SPDX-License-Identifier: MIT
#
# Licensed under the MIT License

[build-system]
requires = [
  "pybind11>=3.0.1",
  "setuptools-scm>=9.2.2",
  "scikit-build-core>=0.11.6",
  "mqt.core~=3.3.3",
]
build-backend = "scikit_build_core.build"

[project]
name = "mqt.qmap"
description = "A tool for Quantum Circuit Mapping"
readme = "README.md"
authors = [
    { name = "Lukas Burgholzer", email = "lukas.burgholzer@tum.de" },
    { name = "Stefan Hillmich", email = "stefan.hillmich@scch.at" },
    { name = "Tom Peham", email = "tom.peham@tum.de" },
    { name = "Ludwig Schmid", email = "ludwig.s.schmid@tum.de" },
    { name = "Yannick Stade", email = "yannick.stade@tum.de" }
]
keywords = ["MQT", "quantum-computing", "design-automation", "compiler", "clifford-synthesis"]
license = "MIT"
license-files = ["LICENSE.md"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Typing :: Typed",
]
requires-python = ">=3.10, != 3.14.1"
dependencies = [
    "mqt.core~=3.3.3",
    "qiskit[qasm3-import]>=1.0.0",
    "rustworkx[all]>=0.16.0",
    "typing_extensions>=4.6; python_version < '3.11'",
]
dynamic = ["version"]

[project.optional-dependencies]
visualization = [
    "distinctipy>=1.3.4",
    "plotly>=6.0.1",
    "networkx>=3.2.1",
    "walkerlayout>=1.0.2",
    "ipywidgets>=8.1.7",
]

[project.urls]
Homepage = "https://github.com/munich-quantum-toolkit/qmap"
Documentation = "https://mqt.readthedocs.io/projects/qmap"
Issues = "https://github.com/munich-quantum-toolkit/qmap/issues"
Discussions = "https://github.com/munich-quantum-toolkit/qmap/discussions"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"

# Set the wheel install directory
wheel.install-dir = "mqt/qmap"

# Explicitly set the package directory
wheel.packages = ["python/mqt"]

# Set required Ninja version
ninja.version = ">=1.10"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}/{build_type}"

# Only build the Python bindings target
build.targets = [
  "mqt-qmap-clifford_synthesis-bindings",
  "mqt-qmap-hybrid_mapper-bindings",
  "mqt-qmap-na-zoned-bindings",
  "mqt-qmap-na-nasp-bindings",
  "mqt-qmap-sc-bindings",
]

# Only install the Python package component
install.components = ["mqt-qmap_Python"]

metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["python/mqt/qmap/_version.py"]
sdist.exclude = [
    "**/.github",
    "**/doc",
    "**/docs",
    "**/eval",
    "**/meta",
    "**/plots",
    "**/test",
    "**/tests",
]

[tool.scikit-build.cmake.define]
BUILD_MQT_QMAP_TESTS = "OFF"
BUILD_MQT_QMAP_BINDINGS = "ON"
ENABLE_IPO = "ON"

[[tool.scikit-build.overrides]]
if.python-version = ">=3.13"
if.abi-flags = "t"
if.platform-system = "win32"
inherit.cmake.define = "append"
cmake.define.DISABLE_GIL = "1"


[tool.check-sdist]
sdist-only = ["python/mqt/qmap/_version.py"]
git-only = [
    "docs/*",
    "eval/*",
    "extern/*",
    "test/*",
    ".idea/*",
]


[tool.setuptools_scm]
write_to = "python/mqt/qmap/_version.py"


[tool.pytest]
minversion = "9.0"
testpaths = ["test/python"]
strict = true
addopts = [
  "-ra",
  "--showlocals",
  "--numprocesses=auto", # Automatically use all available CPU cores for parallel testing
]
log_level = "INFO"
filterwarnings = [
  "error",
  'ignore:.*datetime\.datetime\.utcfromtimestamp.*:DeprecationWarning:',
  # we purposely maintain compatibility with the V1 backends until Qiskit removes them in 2.0
  'ignore:.*qiskit\.providers\.models.* is deprecated.*:DeprecationWarning:mqt.qmap.*',
  'ignore:.*qiskit\.providers\.fake_provider\.fake_backend\.FakeBackend.* is deprecated.*:DeprecationWarning:',
  'ignore:.*qiskit\.providers\.backend.BackendV1.* is deprecated.*:DeprecationWarning:',
  'ignore:.*qiskit\.providers\.backend_compat.BackendV2Converter.* is deprecated.*:DeprecationWarning:',
  # Qiskit 1.2 deprecations (to be removed with Qiskit 2.0)
  'ignore:.*qiskit\.providers\.models.* is deprecated.*:DeprecationWarning:qiskit.*',
  # Qiskit 1.3 deprecations (to be removed with Qiskit 2.0)
  'ignore:.*``qiskit.dagcircuit.dagcircuit.DAGCircuit.*`` is deprecated as of qiskit 1.3.0.*:DeprecationWarning:',
  'ignore:.*``qiskit.circuit.instruction.Instruction.condition`` is deprecated as of qiskit 1.3.0.*:DeprecationWarning:',
  'ignore:.*``qiskit.circuit.library.standard_gates.x.*`` is pending deprecation as of qiskit 1.3.*:PendingDeprecationWarning:',
]

[tool.coverage]
run.source = ["mqt.qmap"]
run.omit = [
  "*/visualization/*",
  "*/_compat/*",
]
report.exclude_also = [
    '\.\.\.',
    'if TYPE_CHECKING:',
    'raise AssertionError',
    'raise NotImplementedError',
    'def __dir__()',  # Ignore __dir__ method that exists mainly for better IDE support
    '@overload'  # Overloads are only for static typing
]
run.disable_warnings = [
  "no-sysmon",
]

[tool.mypy]
files = ["python/mqt", "test/python", "noxfile.py"]
mypy_path = ["$MYPY_CONFIG_FILE_DIR/python"]
python_version = "3.10"
warn_unused_configs = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
strict = true
disallow_untyped_defs = false
explicit_package_bases = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["qiskit.*", "matplotlib.*", "networkx.*", "plotly.*", "_plotly_utils.*", "distinctipy.*", "ipywidgets.*", "walkerlayout.*"]
ignore_missing_imports = true


[tool.check-wheel-contents]
ignore = ["W002"]  # Triggers on __init__.py's


[tool.ruff]
line-length = 120
namespace-packages = ["mqt"]
preview = true
fix = true
unsafe-fixes = true
show-fixes = true
src = ["python"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "A",           # flake8-builtins
    "ANN",         # flake8-annotations
    "ARG",         # flake8-unused-arguments
    "ASYNC",       # flake8-async
    "B",           # flake8-bugbear
    "C4",          # flake8-comprehensions
    "D",           # pydocstyle
    "EM",          # flake8-errmsg
    "EXE",         # flake8-executable
    "FA",          # flake8-future-annotations
    "FLY",         # flynt
    "FURB",        # refurb
    "I",           # isort
    "ICN",         # flake8-import-conventions
    "ISC",         # flake8-implicit-str-concat
    "LOG",         # flake8-logging-format
    "N",           # flake8-naming
    "NPY",         # numpy
    "PERF",        # perflint
    "PGH",         # pygrep-hooks
    "PIE",         # flake8-pie
    "PL",          # pylint
    "PT",          # flake8-pytest-style
    "PTH",         # flake8-use-pathlib
    "PYI",         # flake8-pyi
    "Q",           # flake8-quotes
    "RET",         # flake8-return
    "RSE",         # flake8-raise
    "RUF",         # Ruff-specific
    "S",           # flake8-bandit
    "SLF",         # flake8-self
    "SLOT",        # flake8-slots
    "SIM",         # flake8-simplify
    "T20",         # flake8-print
    "TC",          # flake8-type-checking
    "TID251",      # flake8-tidy-imports.banned-api
    "TRY",         # tryceratops
    "UP",          # pyupgrade
    "YTT",         # flake8-2020
]
ignore = [
    "PLR09",   # Too many <...>
    "PLR2004", # Magic value used in comparison
    "S101",    # Use of assert detected
    "S403",    # `pickle`, `cPickle`, `dill`, and `shelve` modules are possibly insecure
]
future-annotations = true
typing-modules = ["mqt.qmap._compat.typing"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing_extensions.Self".msg = "Use mqt.qmap._compat.typing.Self instead."

[tool.ruff.lint.isort]
known-first-party = ["mqt.qmap"]

[tool.ruff.lint.per-file-ignores]
"test/python/**" = ["T20", "ANN"]
"docs/**" = ["T20"]
"eval/**" = ["T20"]
"noxfile.py" = ["T20", "TID251"]
"*.pyi" = ["D418", "PYI021"]  # "*.pyi" = ["D418", "DOC202", "PYI011", "PYI021"]
"*.ipynb" = [
    "D",    # pydocstyle
    "E402", # Allow imports to appear anywhere in Jupyter notebooks
    "I002", # Allow missing `from __future__ import annotations` import
]
"python/mqt/qmap/_compat/**.py" = ["TID251"]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.typos]
files.extend-exclude = [
  "tableaus\\.json"
]
default.extend-ignore-re = [
  '"id": ".*",',
  "(?Rm)^.*(#|//)\\s*spellchecker:disable-line$",  # ignore line
  "(?s)(#|//)\\s*spellchecker:off.*?\\n\\s*(#|//)\\s*spellchecker:on" # ignore block
]
[tool.typos.default.extend-words]
wille = "wille"
anc = "anc"
optin = "optin"
aer = "aer"
iy = "iy"
ket = "ket"


[tool.repo-review]
ignore = [
  "GH200", # We use Renovate instead of Dependabot
  "PC160", # We use a mirror of crate-ci/typos
]


[tool.cibuildwheel]
build = "cp3*"
skip = ["*-musllinux_*", "cp313t-*"]
archs = "auto64"
test-groups = ["test"]
test-command = "pytest {project}/test/python"
build-frontend = "build[uv]"
enable = ["cpython-freethreading"]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
manylinux-ppc64le-image = "manylinux_2_28"
manylinux-s390x-image = "manylinux_2_28"
test-skip = [
  "cp3??t-*", # no freethreading qiskit wheels
  "cp*-win_arm64", # no numpy, qiskit, ... wheels
]

# The mqt-core shared libraries are provided by the mqt-core Python package.
# They should not be vendorized into the mqt-qcec wheel. This requires
# excluding the shared libraries from the repair process.

[tool.cibuildwheel.linux]
environment = { Z3_ROOT="/opt/python/cp311-cp311/lib/python3.11/site-packages/z3", DEPLOY="ON" }
before-all = "/opt/python/cp311-cp311/bin/pip install z3-solver==4.12.6"
repair-wheel-command = [
    "export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/opt/python/cp311-cp311/lib/python3.11/site-packages/z3/lib",
    """auditwheel repair -w {dest_dir} {wheel} \
--exclude libmqt-core-ir.so.3.3 \
--exclude libmqt-core-qasm.so.3.3 \
--exclude libmqt-core-circuit-optimizer.so.3.3 \
--exclude libmqt-core-ds.so.3.3 \
--exclude libmqt-core-na.so.3.3""",
]

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel} --ignore-missing-dependencies"

[tool.cibuildwheel.windows]
before-build = "uv pip install delvewheel>=1.11.2"
repair-wheel-command = """delvewheel repair -w {dest_dir} {wheel} --namespace-pkg mqt \
--exclude mqt-core-ir.dll \
--exclude mqt-core-qasm.dll \
--exclude mqt-core-circuit-optimizer.dll \
--exclude mqt-core-ds.dll \
--exclude mqt-core-na.dll"""


[tool.uv]
required-version = ">=0.5.20"
cache-keys = [
  { file = "pyproject.toml" },
  { git = { commit = true, tags = true } },
  { file = "bindings/**/*.cpp"},
]


[tool.uv.sources]
mqt-qmap = { workspace = true }

[dependency-groups]
build = [
  "pybind11>=3.0.1",
  "setuptools-scm>=9.2.2",
  "scikit-build-core>=0.11.6",
  "mqt.core~=3.3.3",
]
docs = [
  "distinctipy>=1.3.4",
  "furo>=2025.09.25",
  "ipywidgets>=8.1.7",
  "myst-nb>=1.3.0",
  "networkx>=3.2.1",
  "plotly>=6.0.1",
  "setuptools-scm>=9.2.2",
  "sphinx>=8.1.3",
  "sphinx>=8.2.3; python_version >= '3.11'",
  "sphinx-autoapi>=3.6.0",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.6.1",
  "sphinxcontrib-bibtex>=2.6.5",
  "sphinxcontrib-svg2pdfconverter>=1.3.0",
  "sphinxext-opengraph>=0.13.0",
  "walkerlayout>=1.0.2",
  "qiskit[qasm3-import,visualization]>=1.0.0",
]
test = [
  "networkx>=3.2.1",
  "plotly>=6.0.1",
  "distinctipy>=1.3.4",
  "walkerlayout>=1.0.2",
  "ipywidgets>=8.1.7",
  "pytest>=9.0.1",
  "pytest-cov>=7.0.0",
  "pytest-sugar>=1.1.1",
  "pytest-xdist>=3.8.0",
  "mqt.qcec>=3.3.0",
]
dev = [
  {include-group = "build"},
  {include-group = "test"},
  "nox>=2025.11.12",
]
